--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==19.8.1
 Pillow==5.1.0
 pipenv==2018.5.18
 psycopg2==2.7.4
+psycopg2-binary==2.7.5
 pytz==2018.4
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
