--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 certifi==2018.4.16
 dj-database-url==0.5.0
 Django==2.0.5
+django-ckeditor==5.5.0
+django-js-asset==1.1.0
 gunicorn==19.8.1
+mysqlclient==1.3.12
 Pillow==5.1.0
 pipenv==2018.5.18
 psycopg2==2.7.4
-psycopg2-binary==2.7.5
 pytz==2018.4
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
